2006-05-27  Wakaba  <wakaba@suika.fam.cx>

	* support/: New directory.

	* ChangeLog: New file.
