@@ -1,5 +1,9 @@
 2006-05-27  Wakaba  <wakaba@suika.fam.cx>
 
+	* cvscommit.sh: New file.
+
+2006-05-27  Wakaba  <wakaba@suika.fam.cx>
+
 	* support/: New directory.
 
 	* ChangeLog: New file.
